--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
-    "gh-pages": "^3.1.0",
     "i": "^0.3.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -37,5 +36,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://woniyoon.github.io/react_movie_practice/"
+  "homepage": "https://woniyoon.github.io/react_movie_practice/",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
